small changes in UI

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,27 +23,27 @@
   {%csrf_token%}
   <div class="form-floating mb-3">
     <input type="age" class="form-control" id="floatingInput" placeholder="age" name="age">
-    <label for="floatingInput">Please enter your age(in years)</label>
+    <label for="floatingInput">Please enter your age</label>
   </div>
   <div class="form-floating">
     <input type="trestbps" class="form-control" id="floatingtrestbps" placeholder="trestbps" name="trestbps">
-    <label for="floatingtrestbps">Please enter your resting blood pressure (in mm Hg)</label>
+    <label for="floatingtrestbps">Please enter your resting blood pressure</label>
   </div>
   <div class="form-floating">
     <input type="chol" class="form-control" id="floatingchol" placeholder="chol" name="chol">
-    <label for="floatingchol">Please enter your cholesterol (in mg/dl)</label>
+    <label for="floatingchol">Please enter your cholesterol</label>
   </div>
   <div class="form-floating">
     <input type="thalach" class="form-control" id="floatingthalach" placeholder="thalach" name="thalach">
-    <label for="floatingthalach">Please enter your maximum heart rate achieved</label>
+    <label for="floatingthalach">Please enter your maximum heart rate</label>
   </div>
   <div class="form-floating">
     <input type="oldpeak" class="form-control" id="floatingoldpeak" placeholder="oldpeak" name="oldpeak">
-    <label for="floatingoldpeak">ST depression induced by exercise relative to rest</label>
+    <label for="floatingoldpeak">ST depression induced by exercise | rest</label>
   </div>
   <div class="form-floating">
     <input type="ca" class="form-control" id="floatingca" placeholder="ca" name="ca">
-    <label for="floatingca">Please enter the number of major vessels</label>
+    <label for="floatingca">Please enter number of major vessels</label>
   </div>
   <select class="form-select" aria-label="Default select example" name="sex">
     <option selected>Please select your sex</option>
